--- a/hoshino/modules/priconne/gacha/config.json
+++ b/hoshino/modules/priconne/gacha/config.json
@@ -83,15 +83,15 @@
         "up_prob":   7,
         "s3_prob":  25,
         "s2_prob": 180,
-        "up": [ "镜华" ],
+        "up": [ "凯留(夏日)" ],
         "_comment": "star3 仅填3星常驻角色。不要填UP角，否则出率会偏高",
         "star3": [
             "杏奈","璃乃","初音","伊绪",
             "望","妮诺","秋乃", "亚里莎",
-            "静流","莫妮卡","吉塔", "纯"
+            "静流","莫妮卡","吉塔", "纯", "镜华","伊莉亚","真琴"
         ],
         "other_normal_star3": [
-            "霞", "智", "伊莉亚", "纯", "流夏", "安", "古蕾娅","空花(大江户)", "妮诺(大江户)",
+            "霞", "智",  "流夏", "安", "古蕾娅","空花(大江户)", "妮诺(大江户)",
             "克萝依", "碧(插班生)", "美美(万圣节)", "露娜",
             "伊莉亚(圣诞节)", "霞(魔法少女)", "优妮", "琪爱儿"
         ],
@@ -99,7 +99,35 @@
             "茉莉","茜里","宫子","雪","铃",
             "铃奈","香织","美美","绫音","惠理子",
             "真阳","栞","千歌","空花","珠希","美冬",
-            "深月","铃"
+            "深月","铃","纺希"
+        ],
+        "star1" : [
+            "日和","怜","禊","胡桃","依里","铃莓",
+            "优花梨","碧","美咲","莉玛"
+        ]
+    },
+
+    "花子": {
+        "up_prob":   7,
+        "s3_prob":  25,
+        "s2_prob": 180,
+        "up": [ "花子(夏日)" ],
+        "_comment": "star3 仅填3星常驻角色。不要填UP角，否则出率会偏高",
+        "star3": [
+            "杏奈","璃乃","初音","伊绪",
+            "望","妮诺","秋乃", "亚里莎",
+            "静流","莫妮卡","吉塔", "纯", "镜华","伊莉亚","真琴"
+        ],
+        "other_normal_star3": [
+            "霞", "智",  "流夏", "安", "古蕾娅","空花(大江户)", "妮诺(大江户)",
+            "克萝依", "碧(插班生)", "美美(万圣节)", "露娜",
+            "伊莉亚(圣诞节)", "霞(魔法少女)", "优妮", "琪爱儿"
+        ],
+        "star2": [
+            "茉莉","茜里","宫子","雪","铃",
+            "铃奈","香织","美美","绫音","惠理子",
+            "真阳","栞","千歌","空花","珠希","美冬",
+            "深月","铃","纺希"
         ],
         "star1" : [
             "日和","怜","禊","胡桃","依里","铃莓",
